completed swagger for accounts
